# fast-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml  deploy.yaml
alembic/: env.py
alembic/versions/: 602482e62a28_create_users_table.py  91eaf7b25b55_create_users_table.py  9ce03f30aa1f_hashed_password.py  de969a104090_create_users_table1.py
src/: dependencies.py  main.py  settings.py
src/database/: postgres.py
src/models/: __init__.py  base.py  user.py  users.py
src/repositories/: __init__.py  user.py
src/routers/: auth.py  user.py
src/schemas/: __init__.py  auth.py  user.py
src/services/: __init__.py  auth.py  user.py
src/utils/: jwt.py  security.py
tests/: conftest.py  test_user_api.py
