[project]
name = "fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "black>=25.9.0",
    "fastapi[standard]>=0.120.2",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
    "sqlalchemy>=2.0.44",
]
